// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReportFilter component - Editions should render initial state when a selectedEdition has been removed 1`] = `
<div>
   
  <section
    class="svelte-pelphk"
  >
    <div
      class="report-filter svelte-pelphk"
    >
      <div
        class="filter-selector svelte-pelphk"
        data-testid="display-modal-button"
      >
        <div
          class="icon-wrapper  svelte-pelphk"
        >
          <div
            class=" svelte-zpbvvv"
            style="--icon-width: 20px; --icon-height: 20px;"
          >
            <object
              src="ic-filter.svg/"
            />
          </div>
        </div>
         
        <div>
          No filters applied
        </div>
      </div>
       
      <div
        class="filter-chips svelte-pelphk"
      />
    </div>
     
  </section>
</div>
`;

exports[`ReportFilter component - Editions should render the ReportFilter component with a selectedEdition 1`] = `
<div>
   
  <section
    class="svelte-pelphk"
  >
    <div
      class="report-filter svelte-pelphk"
    >
      <div
        class="filter-selector svelte-pelphk"
        data-testid="display-modal-button"
      >
        <div
          class="icon-wrapper active  svelte-pelphk"
        >
          <div
            class=" svelte-zpbvvv"
            style="--icon-width: 20px; --icon-height: 20px;"
          >
            <object
              src="ic-filter.svg/"
            />
          </div>
        </div>
         
        <div>
          Edition
        </div>
      </div>
       
      <div
        class="filter-chips svelte-pelphk"
      >
        <div
          class="clickable svelte-197mspp"
          data-testid="chip"
        >
          <span
            class="label svelte-197mspp"
          >
            Test Event / Test Edition
          </span>
           
          <span
            class="cross svelte-197mspp"
            data-testid="remove-chip-button"
          >
            <div
              class=" svelte-zpbvvv"
              style="--icon-width: 12px; --icon-height: 12px;"
            >
              <object
                src="ic-delete.svg/"
              />
            </div>
          </span>
        </div>
        
      </div>
    </div>
     
  </section>
</div>
`;
